--- a/styles/main.css
+++ b/styles/main.css
@@ -307,7 +307,7 @@ template {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Pacifico; }
+  font-family: Orbitron; }
 
 body .opening {
   background-image: url(../assets/images/opening.jpeg);
@@ -323,7 +323,6 @@ body .opening {
     align-items: center;
     justify-content: space-between;
     padding: 5vmin;
-    border-radius: 20%;
     background: rgba(255, 255, 255, 0.2);
     margin-top: 15vh; }
     body .opening .menu .play {
@@ -347,14 +346,15 @@ body {
   height: 100vh;
   background-color: #000000; }
   body .container {
-    display: none;
+    display: flex;
     justify-content: center; }
     body .container .status {
       display: flex;
       flex-flow: column nowrap;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
-      padding: 0 2vw; }
+      padding: 0 2vw;
+      user-select: none; }
       body .container .status-box {
         display: flex;
         flex-flow: column nowrap;
@@ -365,7 +365,6 @@ body {
           font-size: 5vh;
           color: white;
           border: 0.7vh solid gray;
-          border-radius: 20%;
           padding: 2vh; }
         body .container .status-box .score {
           font-size: 4vh;
@@ -373,8 +372,16 @@ body {
         body .container .status-box .comment {
           height: 5vh;
           color: red; }
+      body .container .status .to-menu {
+        font-size: 2vh;
+        margin-bottom: 5vh;
+        color: white;
+        background: none;
+        padding: 1vh;
+        cursor: pointer; }
     body .container .board {
-      background-color: #8EB9EF; }
+      background-color: #8EB9EF;
+      cursor: crosshair; }
     body .container .active-box {
       display: flex;
       flex-flow: column nowrap;
@@ -391,8 +398,8 @@ body {
           background: none;
           margin: 2vh 0;
           border-width: 0.8vh;
-          border-radius: 20%;
-          border-color: unset; }
+          border-color: unset;
+          cursor: pointer; }
         body .container .active-box .tool-box button[tool="pickaxe"] {
           background-image: url(../assets/images/Pickaxe.png);
           background-size: 70% 70%;
@@ -415,4 +422,15 @@ body {
         width: 7vh;
         height: 7vh;
         border-width: 0.5vh;
-        border-color: unset; }
+        border-color: unset;
+        cursor: pointer;
+        position: relative; }
+        body .container .active-box .inventory-size {
+          position: absolute;
+          top: 5vh;
+          left: 50%;
+          transform: translateX(-50%);
+          padding-top: 2vh;
+          font-size: 2vh;
+          color: white;
+          text-shadow: 0.1vh 0.5vh black; }
